[Add] Adds data collection

--- a/youtube_to_audio/download_youtube.ipynb
+++ b/youtube_to_audio/download_youtube.ipynb
@@ -10,14 +10,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting pytube\n",
-      "  Using cached pytube-15.0.0-py3-none-any.whl (57 kB)\n",
-      "Installing collected packages: pytube\n",
-      "Successfully installed pytube-15.0.0\n",
-      "Collecting pydub\n",
-      "  Using cached pydub-0.25.1-py2.py3-none-any.whl (32 kB)\n",
-      "Installing collected packages: pydub\n",
-      "Successfully installed pydub-0.25.1\n"
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: pytube in /Users/ajaypokharel/Library/Python/3.9/lib/python/site-packages (15.0.0)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49m/Library/Developer/CommandLineTools/usr/bin/python3 -m pip install --upgrade pip\u001b[0m\n",
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: pydub in /Users/ajaypokharel/Library/Python/3.9/lib/python/site-packages (0.25.1)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.1\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49m/Library/Developer/CommandLineTools/usr/bin/python3 -m pip install --upgrade pip\u001b[0m\n"
      ]
     }
    ],
@@ -35,49 +37,48 @@
    "source": [
     "from pytube import YouTube\n",
     "from pydub import AudioSegment\n",
-    "import os"
+    "import os\n",
+    "import csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "835ded50-2c49-4241-bda9-65b2e85c8e0c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "video_url = 'https://youtu.be/-epr8lPIZYE?si=sb_ppoEyk8S8hRPE'\n",
-    "yt = YouTube(video_url)\n",
-    "audio_stream = yt.streams.filter(only_audio=True).first()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "32206616-5e82-4f79-bf6e-29deb74828df",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "output_path = \"audio_download\"\n",
-    "final_path = output_path + \"/youtube_final.mp3\""
+    "video_ref = 1\n",
+    "with open('video_links.csv', 'r') as file:\n",
+    "     # Create a CSV reader\n",
+    "    csv_reader = csv.DictReader(file)\n",
+    "\n",
+    "    for row in csv_reader:\n",
+    "        video_url = row['links']\n",
+    "        yt = YouTube(video_url)\n",
+    "        audio_stream = yt.streams.filter(only_audio=True).first()\n",
+    "        final_path = output_path + f\"/lecture{video_ref}.mp3\"\n",
+    "        \n",
+    "        # Download the audio stream as a temporary file\n",
+    "        temp_audio_file = audio_stream.download(output_path)\n",
+    "\n",
+    "        # Convert the downloaded audio to MP3 format\n",
+    "        audio = AudioSegment.from_file(temp_audio_file)\n",
+    "        audio.export(final_path, format=\"mp3\")\n",
+    "\n",
+    "        # Delete the temporary audio file\n",
+    "        os.remove(temp_audio_file)\n",
+    "        video_ref += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "0a595480-8f37-4704-a558-ee8ce4353f1b",
+   "execution_count": null,
+   "id": "8fb653da",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Download the audio stream as a temporary file\n",
-    "temp_audio_file = audio_stream.download(output_path)\n",
-    "\n",
-    "# Convert the downloaded audio to MP3 format\n",
-    "audio = AudioSegment.from_file(temp_audio_file)\n",
-    "audio.export(final_path, format=\"mp3\")\n",
-    "\n",
-    "# Delete the temporary audio file\n",
-    "os.remove(temp_audio_file)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -96,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
