--- a/youtube_to_audio/download_youtube.ipynb
+++ b/youtube_to_audio/download_youtube.ipynb
@@ -12,14 +12,8 @@
      "text": [
       "Defaulting to user installation because normal site-packages is not writeable\n",
       "Requirement already satisfied: pytube in /Users/ajaypokharel/Library/Python/3.9/lib/python/site-packages (15.0.0)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49m/Library/Developer/CommandLineTools/usr/bin/python3 -m pip install --upgrade pip\u001b[0m\n",
       "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: pydub in /Users/ajaypokharel/Library/Python/3.9/lib/python/site-packages (0.25.1)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49m/Library/Developer/CommandLineTools/usr/bin/python3 -m pip install --upgrade pip\u001b[0m\n"
+      "Requirement already satisfied: pydub in /Users/ajaypokharel/Library/Python/3.9/lib/python/site-packages (0.25.1)\n"
      ]
     }
    ],
@@ -43,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "835ded50-2c49-4241-bda9-65b2e85c8e0c",
    "metadata": {},
    "outputs": [],
@@ -71,14 +65,6 @@
     "        os.remove(temp_audio_file)\n",
     "        video_ref += 1"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8fb653da",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
