Adds new changes

--- a/speech_to_text/whisper_speech_to_text.ipynb
+++ b/speech_to_text/whisper_speech_to_text.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "f2e15799-6e24-4f78-9543-332f15d8780c",
    "metadata": {},
    "outputs": [],
@@ -86,19 +86,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "33a6d62b-ad7d-43aa-88b2-7bc5e2afd0fe",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/ajaypokharel/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:34: NotOpenSSLWarning: urllib3 v2.0 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -194,6 +185,21 @@
     "    temp_row_entry[\"lecture\"] = transcript.text\n",
     "    lecture_transcript.append(temp_row_entry)\n",
     "    time.sleep(2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "a1e775be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test transcription\n",
+    "audio_file = open(f\"{audio_download_path}test_lecture.mp3\", \"rb\")\n",
+    "transcript = openai.Audio.transcribe(\"whisper-1\", audio_file)\n",
+    "\n",
+    "with open(\"assets/test.txt\", 'w') as file:\n",
+    "    file.write(transcript.text)"
    ]
   },
   {
