--- a/youtube_to_audio/download_youtube.ipynb
+++ b/youtube_to_audio/download_youtube.ipynb
@@ -65,6 +65,31 @@
     "        os.remove(temp_audio_file)\n",
     "        video_ref += 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2b59ff3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for demo purposes\n",
+    "output_path = \"audio_download\"\n",
+    "video_url = \"https://youtu.be/qk0-m_LARCY?si=lxIQs-T18kTyk9mG\"\n",
+    "yt = YouTube(video_url)\n",
+    "audio_stream = yt.streams.filter(only_audio=True).first()\n",
+    "final_path = output_path + f\"/test_lecture.mp3\"\n",
+    "\n",
+    "# Download the audio stream as a temporary file\n",
+    "temp_audio_file = audio_stream.download(output_path)\n",
+    "\n",
+    "# Convert the downloaded audio to MP3 format\n",
+    "audio = AudioSegment.from_file(temp_audio_file)\n",
+    "audio.export(final_path, format=\"mp3\")\n",
+    "\n",
+    "# Delete the temporary audio file\n",
+    "os.remove(temp_audio_file)"
+   ]
   }
  ],
  "metadata": {
